--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -64,8 +64,8 @@
         }
 
         h6 {
-            font-size: 12px;
-            line-height: 11pt;
+            font-size: .8rem;
+            line-height: 16px;
             padding-top: 10px;
             font-weight: 200;
         }
