--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -19,7 +19,7 @@
         align-items: center;
         justify-content: space-between;
 
-        @include tablet-devices {
+        @include laptop-small-devices {
             flex-direction: column;
         }
     }
@@ -27,8 +27,9 @@
     &-section-address {
         width: 100%;
         height: 100%;
+        font-size: 1rem;
 
-        @include tablet-devices {
+        @include laptop-small-devices {
             display: none;
         }
 
@@ -46,6 +47,7 @@
 
             display: flex;
             align-items: center;
+            margin-left: 40px;
 
             span {
                 color: $blueColor;
@@ -59,7 +61,7 @@
     }
 
     &-section-address-tablet {
-        width: 100%;
+        width: 50%;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -79,7 +81,7 @@
             color: $blueColor;
         }
 
-        @include tablet-devices {
+        @include laptop-small-devices {
             display: block;
         }
     }
@@ -117,7 +119,7 @@
         justify-content: flex-end;
         align-items: center;
 
-        @include tablet-devices {
+        @include laptop-small-devices {
             margin-bottom: 10px;
         }
 
@@ -139,11 +141,13 @@
 
         .contact-search {
             height: 100%;
-            padding: 15px;
+            padding: 17px;
             background-color: #C5C5C5;
             color: $textLightColor;
             border-top-left-radius: 5px;
             border-bottom-left-radius: 5px;
+            font-size: .9rem;
+            display: flex;
         }
 
         .contact-phone {
@@ -156,6 +160,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: .9rem;
         }
 
         .contact-appointment {
@@ -170,6 +175,7 @@
             align-items: center;
             border-top-right-radius: 5px;
             border-bottom-right-radius: 5px;
+            font-size: .9rem;
         }
     }
 
