--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -6,9 +6,12 @@
     height: 100%;
     color: $textLightColor;
     background-image: linear-gradient(rgba(65,65,66,0.7), rgba(65,65,66,0.7)), url(/src/assets/images/banner-image.jpeg);
-    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    @include laptop-devices {
+        background-position: center;
+    }
 
     @include tablet-devices {
         background-position: right;
@@ -23,8 +26,12 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 10rem 0;
+        padding: 14rem 0;
         text-align: center;
+
+        @include laptop-devices {
+            padding: 10rem 0;
+        }
 
         @include tablet-devices {
             padding: 6rem 0;
