--- a/src/styles/mobile-contact.scss
+++ b/src/styles/mobile-contact.scss
@@ -55,6 +55,7 @@
         justify-content: center;
         align-items: center;
         color: $textLightColor;
-        font-size: 20px;
+        font-size: 1rem;
+        text-decoration: none;
     }
 }
