--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -120,6 +120,7 @@
             color: $textLightColor;
             cursor: pointer;
             margin-top: 10px;
+            font-size: .875rem;
         }
 
         input[type=submit]:hover {
