--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -72,6 +72,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 1.1rem;
         }
         a:hover {
             border: 0.125rem solid $blueColorHover;
