--- a/src/styles/content-c.scss
+++ b/src/styles/content-c.scss
@@ -21,7 +21,7 @@
 
         p {
             margin-bottom: 1.25rem;
-            font-size: 22px;
+            font-size: 1.5rem;
             font-weight: 100;
             max-width: 53.125rem;
             margin-left: auto;
