--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -26,17 +26,17 @@
         }
 
         h2 {
-            font-size: 30px;
+            font-size: 1.875rem;
         }
 
         h3 {
             line-height: 1.3636363636;
-            font-size: 22px;
+            font-size:1.375rem;
             font-weight: 200;
         }
 
-        h5 {
-            font-size: 20px;
+        h4, h5 {
+            font-size: 1.25;
         }
 
         p {
@@ -81,7 +81,7 @@
         }
 
         h2 {
-            font-size: 30px;
+            font-size: 1.875rem;
         }
 
         .contact-form-group {
@@ -120,7 +120,7 @@
             color: $textLightColor;
             cursor: pointer;
             margin-top: 10px;
-            font-size: .875rem;
+            font-size: 1rem;
         }
 
         input[type=submit]:hover {
